[package]
name = "narwhal-network"
version.workspace = true
license = "Apache-2.0"
authors = [
    "Grant Kee <grant.kee@telco.in>",
    "Mysten Labs <build@mystenlabs.com>",
]
edition = "2021"
publish = false

[dependencies]
dashmap = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
quinn-proto = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
telcoin-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tracing = { workspace = true }
tn-types = { workspace = true }
telcoin-sync = { workspace = true }
consensus-metrics = { workspace = true }
narwhal-network-types = { workspace = true }

anemo = { workspace = true }
anemo-tower = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
narwhal-test-utils = { workspace = true }

[features]
test-utils = []
