[package]
name = "narwhal-node"
version.workspace = true
license = "Apache-2.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
reth-primitives = { workspace = true }
cfg-if = { workspace = true }
# clap = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
reth-tracing = { workspace = true }
url = { version = "2.3.1", optional = true }
axum = { workspace = true }

fastcrypto = { workspace = true }
narwhal-executor = { workspace = true }
narwhal-network = { workspace = true }
narwhal-primary = { workspace = true }
prometheus = { workspace = true }
narwhal-storage = { workspace = true }
narwhal-types = { workspace = true }
narwhal-network-types = { workspace = true }
narwhal-worker = { workspace = true }
eyre = { workspace = true }

consensus-metrics = { workspace = true }

anemo = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
narwhal-test-utils = { workspace = true }
reth-tracing = { workspace = true }
narwhal-network = { workspace = true, features = ["test-utils"]}

[features]
#benchmark = ["narwhal-worker/benchmark", "narwhal-primary/benchmark", "url"]
trace_transaction = ["narwhal-worker/trace_transaction"]

# [[bin]]
# name = "narwhal-benchmark-client"
# path = "src/benchmark_client.rs"
# required-features = ["benchmark"]

[[example]]
name = "narwhal-generate-format"
path = "src/generate_format.rs"
test = false
