[package]
name = "narwhal-primary-metrics"
version.workspace = true
authors = [
    "Grant Kee <grant.kee@telco.in>",
    "Mysten Labs <build@mystenlabs.com>",
    "Steven Stanfield <steve@telcoin.org>",
]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
prometheus = { workspace = true }
narwhal-network = { workspace = true }
tracing = { workspace = true }
consensus-metrics = { workspace = true }
